# open-vfd-simulator

./: .gitignore  AGENTS.md  README.md
backend/: README.md  main.spec  pyproject.toml  vfd-backend.spec
backend/src/open_vfd_simulator_backend/: __init__.py  main.py
backend/src/open_vfd_simulator_backend/api/: app.py
backend/src/open_vfd_simulator_backend/api/routes/: catalog.py  configuration.py  devices.py  opcua.py
backend/src/open_vfd_simulator_backend/catalogs/: __init__.py
backend/src/open_vfd_simulator_backend/catalogs/motors/: generic.yaml
backend/src/open_vfd_simulator_backend/catalogs/vfds/: generic.yaml
backend/src/open_vfd_simulator_backend/domain/: models.py
backend/src/open_vfd_simulator_backend/services/: catalog_service.py  device_registry.py  opcua_client.py  simulation_runtime.py  software_configuration.py
backend/src/open_vfd_simulator_backend/simulation/: basic_vfd.py  contracts.py
backend/tests/: conftest.py  test_api.py  test_catalog.py
docs/: ARCHITECTURE.md  CATALOG_FORMAT.md  DEVELOPMENT.md  PROJECT_FORMAT.md  SIMULATION_CONTRACT.md
frontend/: electron-builder.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/electron/: main.mjs  main.ts  preload.cjs  preload.ts
frontend/src/: App.tsx  api.ts  electron.d.ts  i18n.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AppLayout.tsx  CreateDeviceWizard.tsx  MotorSpeedChart.tsx  StatusFooter.tsx  WindowHeader.tsx  WorkspaceNav.tsx
frontend/src/context/: AppContext.tsx
frontend/src/lib/: opcuaTelemetry.ts
frontend/src/locales/: en.json  (+1 more)
(+16 files in other folders)
